change images en careers, education blocks; update descriptons in personal projects block

--- a/src/pug/chunk/careers.pug
+++ b/src/pug/chunk/careers.pug
@@ -2,10 +2,10 @@ div.careers
     h2.title Опыт работы
     div.row.my-3.pb-3.bottom-line
         div.col-md-3.careers__left-block(data-aos="fade-up" data-aos-duration="3000")
-            p.careers__text Open to work now. Работал над следующими проектами для фирмы "Online Solutions"
+            p.careers__text Работал над следующими проектами для фирмы "Online Solutions":
         div.col-md-5
         div.col-md-4.careers__right-block(data-aos="fade-up" data-aos-duration="3000")
-            img(src="./img/work.png", class="careers__picture", alt="careers", srcset="")
+            img(src="./img/work2.png", class="careers__picture", alt="careers", srcset="")
         
         div.timeline
             ul.clickable-list
