--- a/src/pug/chunk/education.pug
+++ b/src/pug/chunk/education.pug
@@ -7,7 +7,7 @@ div.education
             //- p.education__text Coninue to learn nowdays. Interested in Artificial Intelegence and Mathematics.
         div.col-md-5
         div.col-md-4.education__right-block(data-aos="fade-up" data-aos-duration="3000")
-            img(src="./img/education.png", class="education__picture", alt="", srcset="")
+            img(src="./img/education4.png", class="education__picture", alt="", srcset="")
         div.timeline
             ul
                 li(data-aos="fade-up" data-aos-duration="3000")
