update header styles and header image

--- a/src/pug/chunk/aboutme.pug
+++ b/src/pug/chunk/aboutme.pug
@@ -1,8 +1,9 @@
 div(class="aboutme")
     div(class="my-3 pb-3 bottom-line")
-        div(class="d-flex" data-aos="fade-up" data-aos-duration="1000")
-            img(class="me-3 aboutme__profile-photo" src="./img/me2018.jpg", width="250px" height="250px" alt="photo of me", srcset="")
-            div.right-block
+        div(class="row" data-aos="fade-up" data-aos-duration="800")
+            div.col-sm-5.col-lg-4.col-xl-3.d-flex.justify-content-center
+                img(class="me-3 aboutme__profile-photo" src="./img/me2018.jpg", width="250px" height="250px" alt="photo of me", srcset="")
+            div.col-sm-7.sol-lg-8.col-xl-9
                 h2.title Обо мне
                 p.aboutme__text-info 
                                     | Уже три года живу в Ереване и работаю full-stack Python-разработчиком, специализируясь на Django и современных веб-технологиях. Мой опыт включает разработку RESTful API, написание телеграм ботов, верстку с использованием javascript и проектирование эффективных схем баз данных.
