--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -56,7 +56,7 @@ block modal
     - 
         var modal_data = {
             id: "alphardModal", 
-            title: "Крупный дистрибутор аудио оборудования", 
+            title: "Крупный дистрибьютор аудио оборудования", 
             text: `
             <p>
                 Разработка нового функционала как на фронтенде, так и на бекенде. Подключение к сторонним API, устранение ошибок,
