update styles for hovering in careers and portfolio timelines

--- a/src/pug/chunk/careers.pug
+++ b/src/pug/chunk/careers.pug
@@ -7,7 +7,7 @@ div.careers
         div.col-md-4.careers__right-block(data-aos="fade-up" data-aos-duration="1800")
             img(src="./img/work2.png", class="careers__picture", alt="careers", srcset="")
         
-        div.timeline
+        div.timeline.hover-effect
             ul.clickable-list
                 li(data-aos="fade-up", data-aos-duration="1800", data-bs-toggle="modal", data-bs-target="#alphardModal")
                     div.d-flex.justify-content-between
