compress pngs into jpgs

--- a/src/pug/chunk/portfolio.pug
+++ b/src/pug/chunk/portfolio.pug
@@ -7,7 +7,7 @@ div.portfolio
 
         div.col(data-bs-toggle="modal" data-bs-target="#todoWithAIModal")
             div.card.project-card
-                img(src="./img/todo_with_ai.png", class="project-card__image", alt="...", srcset="")
+                img(src="./img/todo_with_ai.jpg", class="project-card__image", alt="...", srcset="")
                 div.card-img-overlay.d-flex.align-items-center
                     div.project-card__content
                         //- h5.project-card__title.card-title.text-center Todo with ai
@@ -15,7 +15,7 @@ div.portfolio
 
         div.col(data-bs-toggle="modal" data-bs-target="#steposModal")
             div.card.project-card
-                img(src="./img/stepos.png", class="project-card__image", alt="...", srcset="")
+                img(src="./img/stepos.jpg", class="project-card__image", alt="...", srcset="")
                 div.card-img-overlay.d-flex.align-items-center
                     div.project-card__content
                         //- h5.project-card__title.card-title.text-center Film Base
@@ -23,7 +23,7 @@ div.portfolio
         
         div.col(data-bs-toggle="modal" data-bs-target="#guidedTourModal")
             div.card.project-card
-                img(src="./img/ul_guided_tours.png", class="project-card__image", alt="...", srcset="")
+                img(src="./img/ul_guided_tours.jpg", class="project-card__image", alt="...", srcset="")
                 div.card-img-overlay.d-flex.align-items-center
                     div.project-card__content
                         //- h5.project-card__title.card-title.text-center Ulyanovsk Guided Tours
@@ -31,7 +31,7 @@ div.portfolio
         
         div.col(data-bs-toggle="modal" data-bs-target="#solarSystemModal")
             div.card.project-card
-                img(src="./img/solar_system_tour.png", class="project-card__image", alt="...", srcset="")
+                img(src="./img/solar_system_tour.jpg", class="project-card__image", alt="...", srcset="")
                 div.card-img-overlay.d-flex.align-items-center
                     div.project-card__content
                         //- h5.project-card__title.card-title.text-center Space Tour 2189
@@ -39,7 +39,7 @@ div.portfolio
 
         div.col(data-bs-toggle="modal" data-bs-target="#kanbanBoardBackend")
             div.card.project-card
-                img(src="./img/kanban_board_backend.png", class="project-card__image", alt="...", srcset="")
+                img(src="./img/kanban_board_backend.jpg", class="project-card__image", alt="...", srcset="")
                 div.card-img-overlay.d-flex.align-items-center
                     div.project-card__content
                         //- h5.project-card__title.card-title.text-center TODO list
