--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -98,10 +98,10 @@ block modal
                 <br><a href="https://github.com/alchemistOfWeb/solarSystemTour">Ссылка на проект</a>
             `,
             img: [
-                {src: "./img/solar_system_tour/1.png", label: "first slide"}, 
-                {src: "./img/solar_system_tour/2.png", label: "first slide"}, 
-                {src: "./img/solar_system_tour/3.png", label: "first slide"}, 
-                {src: "./img/solar_system_tour/4.png", label: "first slide"}, 
+                {src: "./img/solar_system_tour/1.jpg", label: "first slide"}, 
+                {src: "./img/solar_system_tour/2.jpg", label: "first slide"}, 
+                {src: "./img/solar_system_tour/3.jpg", label: "first slide"}, 
+                {src: "./img/solar_system_tour/4_2.jpg", label: "first slide"}, 
                 ]
         }
     include ./utils/modal
@@ -128,9 +128,9 @@ block modal
                 <br><a href="https://github.com/alchemistOfWeb/Ulynovsk-guided-tours">Ссылка на проект</a>
             `,
             img: [
-                {src: "./img/ul_guided_tours/1.png", label: "first slide"},
-                {src: "./img/ul_guided_tours/2.png", label: "first slide"},
-                {src: "./img/ul_guided_tours/3.png", label: "first slide"},
+                {src: "./img/ul_guided_tours/1.jpg", label: "first slide"},
+                {src: "./img/ul_guided_tours/2.jpg", label: "first slide"},
+                {src: "./img/ul_guided_tours/3.jpg", label: "first slide"},
             ]
         }
     include ./utils/modal
@@ -188,10 +188,10 @@ block modal
                 <br><a href="https://github.com/alchemistOfWeb/Falsum-verum">Ссылка на проект</a>
             `,
             img: [
-                {src: "./img/stepos/1.png", label: "first slide"}, 
-                {src: "./img/stepos/2.png", label: "second slide"},
-                {src: "./img/stepos/3.png", label: "third slide"},
-                {src: "./img/stepos/4.png", label: "third slide"}
+                {src: "./img/stepos/1.jpg", label: "first slide"}, 
+                {src: "./img/stepos/2.jpg", label: "second slide"},
+                {src: "./img/stepos/3.jpg", label: "third slide"},
+                {src: "./img/stepos/4.jpg", label: "third slide"}
             ]
         }
     include ./utils/modal
