--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,7 +35,7 @@ body {
 .section-header {
     overflow: overlay;
     height: 100vh;
-    background-image: url("../img/pattern1.png");
+    background-image: url("../img/pattern1.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
