change theme of modals to dark

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -29,7 +29,7 @@ block modal
                     <li>Автоматизированная рассылка сообщений и управление подписками</li>
                 </ul>
             `,
-            img: []
+            img: null
         }
     include ./utils/modal
 
@@ -49,7 +49,7 @@ block modal
                 <li>Регистрация пользователей по номеру телефона и личный кабинет с историей заказов</li>
             </ul>
             `,
-            img: []
+            img: null
         }
     include ./utils/modal
 
@@ -72,7 +72,7 @@ block modal
                 <li>Docker использовался для контейнеризации Django-приложения, Celery и базы данных</li>
             </ul>
             `,
-            img: []
+            img: null
         }
     include ./utils/modal
 
@@ -95,7 +95,7 @@ block modal
                     <li>Настроен CI через GitHub Actions</li>
                 </ul>
 
-                <br><a href="https://github.com/alchemistOfWeb/solarSystemTour">Ссылка на проект</a>
+                <br><a class="text-secondary" href="https://github.com/alchemistOfWeb/solarSystemTour">Ссылка на репозиторий</a>
             `,
             img: [
                 {src: "./img/solar_system_tour/1.jpg", label: "first slide"}, 
@@ -125,7 +125,7 @@ block modal
                     <li>Использует Yandex.Maps API для отображения маршрутов и точек интереса.</li>
                 </ul>
 
-                <br><a href="https://github.com/alchemistOfWeb/Ulynovsk-guided-tours">Ссылка на проект</a>
+                <br><a class="text-secondary" href="https://github.com/alchemistOfWeb/Ulynovsk-guided-tours">Ссылка на репозиторий</a>
             `,
             img: [
                 {src: "./img/ul_guided_tours/1.jpg", label: "first slide"},
@@ -156,7 +156,7 @@ block modal
                     <li>Шаблонизатор Jinja2 для динамической генерации HTML страниц.</li>
                 </ul>
                 
-                <br><a href="https://github.com/alchemistOfWeb/Todo-with-ai">Ссылка на проект</a>
+                <br><a class="text-secondary" href="https://github.com/alchemistOfWeb/Todo-with-ai">Ссылка на репозиторий</a>
             `,
             img: [
                 {src: "./img/todo_with_ai/1.jpg", label: "first slide"},
@@ -185,7 +185,7 @@ block modal
                     <li>Использовался Bootstrap 5 для стилизации и верстки</li>
                 </ul>
 
-                <br><a href="https://github.com/alchemistOfWeb/Falsum-verum">Ссылка на проект</a>
+                <br><a class="text-secondary" href="https://github.com/alchemistOfWeb/Falsum-verum">Ссылка на репозиторий</a>
             `,
             img: [
                 {src: "./img/stepos/1.jpg", label: "first slide"}, 
@@ -213,8 +213,8 @@ block modal
                     <li>Продумана модульная архитектура и REST-принципы взаимодействия</li>
                 </ul>
 
-                <br><a href="https://github.com/alchemistOfWeb/Kanban_board_bkend">Ссылка на проект</a>
+                <br><a class="text-secondary" href="https://github.com/alchemistOfWeb/Kanban_board_bkend">Ссылка на репозиторий</a>
             `,
-            img: []
+            img: null
         }
     include ./utils/modal
