add parallax effect in header

--- a/src/pug/chunk/header.pug
+++ b/src/pug/chunk/header.pug
@@ -1,3 +1,23 @@
+div.section-header-bg
+    // Тон 1
+    img.section-bg__shape.tone-1(data-depth="0.07", src="./img/parallax_shapes/x.svg", alt="")
+    img.section-bg__shape.tone-1(data-depth="0.10", src="./img/parallax_shapes/plus.svg", alt="")
+    img.section-bg__shape.tone-1(data-depth="0.06", src="./img/parallax_shapes/ring.svg", alt="")
+    img.section-bg__shape.tone-1(data-depth="0.09", src="./img/parallax_shapes/chevron_left.svg", alt="")
+    img.section-bg__shape.tone-1(data-depth="0.09", src="./img/parallax_shapes/chevron_right.svg", alt="")
+    img.section-bg__shape.tone-1(data-depth="0.08", src="./img/parallax_shapes/double_chevron_left.svg", alt="")
+    img.section-bg__shape.tone-1(data-depth="0.08", src="./img/parallax_shapes/double_chevron_right.svg", alt="")
+    img.section-bg__shape.tone-1(data-depth="0.05", src="./img/parallax_shapes/corner.svg", alt="")
+    img.section-bg__shape.tone-1(data-depth="0.07", src="./img/parallax_shapes/angle_left.svg", alt="")
+    img.section-bg__shape.tone-1(data-depth="0.07", src="./img/parallax_shapes/angle_right.svg", alt="")
+
+    // Тон 2
+    img.section-bg__shape.tone-2(data-depth="0.14", src="./img/parallax_shapes/arc_quarter.svg", alt="")
+    img.section-bg__shape.tone-2(data-depth="0.13", src="./img/parallax_shapes/arc_semi.svg", alt="")
+    img.section-bg__shape.tone-2(data-depth="0.12", src="./img/parallax_shapes/c_bracket.svg", alt="")
+    img.section-bg__shape.tone-2(data-depth="0.15", src="./img/parallax_shapes/dot.svg", alt="")
+    img.section-bg__shape.tone-2(data-depth="0.11", src="./img/parallax_shapes/plus_thin.svg", alt="")
+    img.section-bg__shape.tone-2(data-depth="0.11", src="./img/parallax_shapes/x_thin.svg", alt="")
 div.section-header.mb-5
     div.container.d-flex.flex-column.align-items-center.justify-content-center.section-header__inner-layout
         div.d-flex.flex-column.align-items-center
