skills without stars

--- a/src/pug/chunk/portfolio.pug
+++ b/src/pug/chunk/portfolio.pug
@@ -2,7 +2,7 @@ div.portfolio
     h2.title Личные проекты (образовательные и экспериментальные)
     //- div.d-flex.my-3.pb-3.flex-wrap
     //- div.card-group.my-3.pb-3.flex-wrap
-    div.row.row-cols-1.row-cols-md-3.g-4.my-3.pb-3
+    div.row.row-cols-1.row-cols-md-3.g-4.my-3.pb-3.bottom-line
 
 
         div.col(data-bs-toggle="modal" data-bs-target="#todoWithAIModal")
